--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vitest": "0.30.1"
   },
   "dependencies": {
+    "@fastify/jwt": "6.7.1",
     "@prisma/client": "4.13.0",
     "bcryptjs": "2.4.3",
     "date-fns": "2.29.3",
